[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartnet"
version = "0.0.1"
description = "HeartNet package."
# readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Robert Giesler", email = "robert.giesler@rwth-aachen.de"}
]
# keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas >= 2.0.0",
    "numpy >= 1.24.0",
    "networkx >= 2.5",
    "henhoe2vec",
    "tomli",
    "POT",
]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.urls]
# Repository = ""
